@@ -27,7 +27,7 @@ $CONF_FILE_PATH = '__CONF_FILE_PATH__';
 
 
 sub sauron_version() {
-  return "0.7.2"; # current Sauron version
+  return "0.7.3beta"; # current Sauron version
 }
 
 
