@@ -1299,7 +1299,8 @@ sub print_cidr_list($$$$) {
   my($name,$type,$ref,$hdr) = @_;
   my(@q,$j,$val,$com);
 
-  db_query("SELECT c.mode,c.ip,c.acl,c.tkey,c.op,c.comment,a.name,k.name " .
+  db_query("SELECT c.mode,c.ip,c.acl,c.tkey,c.op,c.port,c.comment" .
+           ",a.name,k.name " .
 	   "FROM cidr_entries c LEFT JOIN acls a ON c.acl=a.id " .
 	   " LEFT JOIN keys k ON c.tkey=k.id " .
 	   "WHERE c.type=$type AND c.ref=$ref " .
@@ -1309,7 +1310,8 @@ sub print_cidr_list($$$$) {
     if (@q > 0) {
       print BINDFILE "${hdr}${name} {\n";
       for $j (0..(@q-1)) {
-	my ($mode,$ip,$acl,$tkey,$op,$comment,$aclname,$keyname) = @{$q[$j]};
+	my ($mode,$ip,$acl,$tkey,$op,$port,$comment,$aclname,$keyname) 
+	    = @{$q[$j]};
 	  
 	$ip =~ s/\/32\s*$//;
 	$com=($comment ? "  // $comment" : "");
@@ -1319,6 +1321,9 @@ sub print_cidr_list($$$$) {
 	if ($mode == 0 && $ip) { $val=$ip; }
 	elsif ($mode == 1 && $aclname) { $val=$aclname; }
 	elsif ($mode == 2 && $keyname) { $val="key $keyname"; }
+	
+	# forward zones forwarders port 
+	if ($mode == 0 & $type == 12 && $port) { $val .= " port $port"; }
 
 	printf BINDFILE "$hdr\t%1s %-20s %s\n",$op,"$val;",$com
 	  if ($val);
