@@ -1,11 +1,14 @@
 /* convert Sauron database format from 1.3 to 1.4beta */
 /* (this requires PostgreSQL v7.3 or later) */
 
-/* update servers table to accommodate include-file use */
+/* NOTICE: named_include and dhcpd_include are OBSOLETED */
+/* ALTER TABLE servers DROP COLUMN named_include text; */
+/* ALTER TABLE servers DROP COLUMN dhcpd_include text; */
 
-ALTER TABLE servers DROP COLUMN named_include text;
-ALTER TABLE servers DROP COLUMN dhcpd_include text;
+/* update servers table to accommodate forward port use */
 
-/* UPDATE settings SET value='1.3' where setting='dbversion'; */
+ALTER TABLE cidr_entries ADD COLUMN port INT4;
+
+UPDATE settings SET value='1.4' where setting='dbversion';
 
 /* eof */
